Revision history for Pandoc-Elements

{{$NEXT}}

0.26  2016-11-11 10:49:22 CET
    - Extend Pod::Simple::Pandoc
    - Add Pandoc::Filter::HeaderIdentifiers
    - Mark pandocwalk and Pandoc::Filter::Lazy as deprecated

0.25  2016-10-11 21:32:00 CEST
    - Improve pod2pandoc script
    - Rename Pandoc::Filter::Usage::frompod to ::pod2usage
    - Add example filter: section
    - use new CPAN module Pandoc

0.24  2016-10-06 14:17:31 CEST
    - Rewrite and rename pandoc-filters to multifilter

0.23  2016-09-30 22:35:22 CEST
    - Add Pandoc::Filter::Usage and option --about for filter documentation
    - Extend pandoc-filters to support future Pandoc filters directory
    - Make most getters also setters

0.22  2016-09-22 12:03:38 CEST
    - Add pandoc-filters script to run filters specified in document metadata 
    - Let pandoc_walk/pandoc_filter not filter metadata fields
    - Add metavars example 

0.21  2016-09-19 22:05:43 CEST
    - extend method 'keyvals' as setter
    - document and extend metadata elements by method 'metavalue'
    - make content method an optional setter (not documented yet)
    - let to_json return canonical JSON

0.20  2016-09-04 14:34:05 CEST
    - Revert extended class selector, implement setter for id/class/keyvals instead
    - Add graphviz example

0.19  2016-09-03 09:42:34 CEST
    - Extend class selector to test existence of given class
    - Extend attributes with Hash::MultiValue.
    - Drop support of special key 'classes' in attributes helper function

0.18  2016-04-06 13:23:35 CEST
    - Fix and extend attributes function (#29/#26/#14)
    - Document and test removal of SoftBreak element
    - fix json serialization to ensure right scalar types (#27)

0.17  2016-03-07 21:15:58 CET
    - Support stringification of meta elements
    - Add SoftBreak inline element, introduced in Pandoc 1.16

0.16  2016-02-23 20:16:52 CET
    - Support new (Pandoc 1.16) document model with Link and Image attributes (issue #11)