@@ -3,7 +3,7 @@ use strict;
 use warnings;
 use 5.010;
 
-our $VERSION = '0.26';
+our $VERSION = '0.27';
 
 use Carp;
 use JSON qw(decode_json);
