@@ -12,9 +12,9 @@ foreach my $bin (@releases) {
     my $version = $bin; $version =~ s/[^0-9.]//g;
     is $pandoc->version, $version, $version;
 
-    my $doc = $pandoc->parse( markdown => "| line\n" );
-    say $doc->api_version;
-    say $doc->to_json;
+    #my $doc = $pandoc->parse( markdown => "| line\n" );
+    #say $doc->api_version;
+    #say $doc->to_json;
 
     local $ENV{PATH} = "xt/bin/$version:$PATH";
     local $ENV{RELEASE_TESTING} = 1;
