@@ -1,6 +1,8 @@
 Revision history for Pandoc-Elements
 
 {{$NEXT}}
+    - Update internal Document structure and default to Pandoc 1.18
+    - Extend testing
 
 0.26  2016-11-11 10:49:22 CET
     - Extend Pod::Simple::Pandoc
